--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "database/seeds/CreateRoleSeeder.php"
         ]
     },
     "autoload-dev": {
