--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^8.2",
+        "spatie/laravel-searchable": "^1.9",
         "unisharp/laravel-filemanager": "^2.2"
     },
     "require-dev": {
